<resources>
    <string name="app_name">Water Reporter</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- String related to main activity -->
    <string name="btn_gameMap">Map a man hole</string>
    <string name="btn_reportFault">Report a water fault</string>
    <string name="img_profilePic">Profile image</string>
    <string name="btn_moreInfo">More information</string>
    <string name="btn_contactUs">Contact Us</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
