<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity"
    android:visibility="visible">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">.

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:id="@+id/img_profilePic"
                android:src="@drawable/profile_placeholder"
                android:contentDescription="@string/img_profilePic" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Guest"
                    android:id="@+id/txt_userName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Reputation: n/a"
                    android:id="@+id/txt_userRep" />

                <ImageButton
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_gameMap"
                    android:layout_gravity="center_horizontal|right"
                    android:contentDescription="@string/btn_gameMap"
                    android:nestedScrollingEnabled="false"
                    android:onClick="launchMap"
                    android:src="@drawable/mapmanhole"
                    android:scaleType="fitCenter" />

            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/btn_reportFault"
            android:contentDescription="@string/btn_reportFault"
            android:onClick="launchReportProblem"
            android:src="@drawable/report"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginBottom="50dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="95dp"
                android:id="@+id/imageView2"
                android:src="@drawable/severn_trent_water" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_moreInfo"
                    android:id="@+id/btn_moreInfo"
                    android:onClick="moreInfo" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_contactUs"
                    android:id="@+id/btn_contactUs"
                    android:onClick="contactUs" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
